Rename command: std.Details -> std.Host Rename HostDetails -> HostInfo
